--- a/css-j2bt6x/404.css
+++ b/css-j2bt6x/404.css
@@ -1,56 +1,2 @@
-
-
-#frm404 {
-    z-index: 1;
-    width: 360px;
-    height: 300px;
-    border: 1px solid white;
-    border-radius: 6px;
-    margin: auto;
-    background-color: rgba(0, 0, 0, 0.05);
-    aspect-ratio: 1/1;
-    display: inline-flex;
-    flex-direction: column;
-}
-
-#frmHeader {
-    width: 100%;
-    height: 40px;
-    display: flex;
-}
-
-#frmHeader h1{
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 38px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-    margin: auto;
-}
-
-#frmBody {
-    width: 100%;
-    height: 100%;
-    display: flex;
-}
-
-#frmBody h1{
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 100px;
-    line-height: 38px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-    margin: auto;
-}
-
-#line {
-    width: 96%;
-    height: 1px;
-    background-color: white;
-    margin: auto;
-    opacity: .3;
-}
+/* OBFUSCATED BY CSSOBFUSCATOR.COM at 2023/08/09 00:58:52 */
+#frm404{z-index:1;}#frmBody h1,#frmHeader h1{font-family:"Roboto";}#frm404{width:360px;}#frmBody h1,#frmHeader h1{font-style:normal;}#frmHeader h1{font-weight:700;}#frmHeader h1{font-size:.875pc;}#frmHeader h1,#frmBody h1{line-height:28.5pt;}#frm404{height:18.75pc;}#frm404{border-left-width:.75pt;}#frmHeader h1,#frmBody h1{letter-spacing:.1em;}#frmBody h1,#frmHeader h1{color:#fff;}#frm404{border-bottom-width:.75pt;}#frm404{border-right-width:.75pt;}#frm404{border-top-width:.75pt;}#frm404{border-left-style:solid;}#frm404{border-bottom-style:solid;}#frm404{border-right-style:solid;}#frm404{border-top-style:solid;}#frm404{border-left-color:white;}#frmHeader h1,#line,#frm404,#frmBody h1{margin-left:auto;}#frm404{border-bottom-color:white;}#frm404{border-right-color:white;}#frm404{border-top-color:white;}#frmHeader h1,#frm404,#line,#frmBody h1{margin-bottom:auto;}#frm404{border-image:none;}#frm404{border-radius:6px;}#frmBody h1,#line,#frm404,#frmHeader h1{margin-right:auto;}#line,#frm404,#frmHeader h1,#frmBody h1{margin-top:auto;}#frm404{background-color:rgba(0,0,0,.05);}#frm404{aspect-ratio:1/1;}#frm404{display:inline-flex;}#frm404{flex-direction:column;}#frmHeader,#frmBody{width:100%;}#frmHeader{height:.416666667in;}#frmBody h1{font-weight:900;}#frmBody h1{font-size:75pt;}#frmHeader,#frmBody{display:flex;}#frmBody{height:100%;}#line{width:96%;}#line{height:.0625pc;}#line{background-color:white;}#line{opacity:.3;}
