--- a/css-j2bt6x/dashboard.css
+++ b/css-j2bt6x/dashboard.css
@@ -1,258 +1,2 @@
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: white;
-    opacity: 0.5; /* Firefox */
-  }
-  
-  :-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color: rgba(255, 255, 255, 0.5)
-  }
-  
-  ::-ms-input-placeholder { /* Microsoft Edge */
-    color: rgba(255, 255, 255, 0.5)
-  }
-
-#dashboard {
-    width: 800px;
-    min-width: 320px;
-    margin:auto;
-    margin-top: 7.4em;
-    margin-bottom: 10vh;
-    height: auto;
-    padding-left: 1em;
-    padding-right: 1em;
-    display: inline-flex;
-    flex-direction: column;
-}
-
-#dashboard img {
-    cursor: pointer;
-}
-
-.frm {
-    width: 100%;
-    min-height: 130px;
-    display: inline-flex;
-    flex-direction: column;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 3em;
-}
-
-.frm img {
-    object-fit: none;
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-.frm h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 22px;
-    line-height: 28px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-}
-
-.entry {
-    width: 100%;
-    height: auto;
-    border: 1px solid white;
-    border-radius: 6px;
-    margin-top: 0.5em;
-    background: rgba(0, 0, 0, 0.05);
-}
-
-.entryHeader {
-    display: flex;
-    width: 98%;
-    height: auto;
-    margin: auto;
-    margin-top: 1em;
-
-    justify-content: center;
-}
-
-
-.bannerLine {
-    width: 98%;
-    height: 1px;
-    background-color: white;
-    margin-top: 1em;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 0.5em;
-    opacity: .3;
-}
-
-#divMessage {
-    width: 100%;
-    min-height: 40px;
-    height: auto;
-    display: flex;
-    margin-top: auto;
-    margin-bottom: auto;
-    word-break: break-all;
-    justify-content: center;
-}
-
-#divMessage h1{
-    font-family: 'Roboto';
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 18px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-    margin-left: 1em;
-    margin-right: 1em;
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
-
-#btnShow {
-    opacity: .25;
-}
-
-
-#txtCardNo {
-    display: flex;
-    width: 40px;
-    min-width: 40px;
-    height: 40px;
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-    border: 1px solid #FFFFFF;
-    border-radius: 4px;
-    background-color: transparent;
-}
-
-#txtCardNo h1 {
-    margin: auto;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    color: white;
-}
-
-.textbox {
-    margin: auto;
-    width: 88%;
-    height: 40px;
-    border: 1px solid #FFFFFF;
-    border-radius: 4px;
-    background-color: transparent;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    padding-left: .4em;
-    padding-right: .4em;
-    padding-top: auto;
-    padding-bottom: auto;
-    color: white;
-    outline: none;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-.cardEntry {
-    display: flex;
-    width: 98%;
-    height: 40px;
-    margin-top: 1em;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 0.5em;
-    justify-content: center;
-}
-
-
-.cardNo {
-    width: 50px;
-    height: 40px;
-    outline: none;
-    display: flex;
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-    cursor: pointer;
-}
-
-.cardNo h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-    margin: auto;
-}
-
-.cardTitle {
-    width: 50%;
-    height: 40px;
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-    display: flex;
-    overflow: hidden;
-    cursor: pointer;
-}
-
-.cardTitle h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-    margin-top: auto;
-    margin-bottom: auto;
-    text-align: left;    
-}
-
-
-.cardLink {
-    width: 50%;
-    height: 20px;
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-    display: flex;
-    overflow: hidden;
-    word-break:keep-all;
-    cursor: pointer;
-    background-color: transparent;
-    outline: none;
-    border: none;
-
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-    margin-top: auto;
-    margin-bottom: auto;
-    text-align: left;
-}
-
-.btnCardEdit {
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-
-
+/* OBFUSCATED BY CSSOBFUSCATOR.COM at 2023/08/09 00:59:02 */
+#dashboard{width:50pc;}[class~=entry],[class~=frm]{width:100%;}[class~=frm]{min-height:97.5pt;}#dashboard{min-width:20pc;}[class~=frm]{display:inline-flex;}#dashboard img{cursor:pointer;}[class~=frm]{flex-direction:column;}[class~=frm] img{object-fit:none;}[class~=frm]{margin-left:auto;}[class~=frm]{margin-right:auto;}#divMessage h1,[class~=frm] h1{font-family:"Roboto";}[class~=frm]{margin-bottom:3em;}[class~=entryHeader],#dashboard,[class~=entry]{height:auto;}[class~=entry]{border-left-width:.010416667in;}[class~=entryHeader],#dashboard{margin-left:auto;}[class~=entry]{border-bottom-width:.010416667in;}[class~=frm] img{margin-left:.2em;}#dashboard{margin-bottom:10vh;}[class~=entry]{border-right-width:.010416667in;}[class~=entry]{border-top-width:.010416667in;}[class~=entryHeader],[class~=frm] img{margin-bottom:auto;}[class~=entry]{border-left-style:solid;}[class~=entryHeader],#dashboard{margin-right:auto;}[class~=entry]{border-bottom-style:solid;}[class~=entry]{border-right-style:solid;}[class~=entry]{border-top-style:solid;}#divMessage h1{font-weight:700;}[class~=entry]{border-left-color:white;}[class~=entry]{border-bottom-color:white;}[class~=frm] img{margin-right:.2em;}[class~=entry]{border-right-color:white;}[class~=frm] img{margin-top:auto;}[class~=entry]{border-top-color:white;}[class~=entry]{border-image:none;}#dashboard{margin-top:7.4em;}[class~=entry]{border-radius:6px;}[class~=entry]{margin-top:.5em;}[class~=entry]{background:rgba(0,0,0,.05);}[class~=entryHeader]{display:flex;}[class~=entryHeader],.bannerLine{width:98%;}[class~=entryHeader],.bannerLine{margin-top:1em;}[class~=entryHeader]{justify-content:center;}[class~=textbox],#divMessage h1{font-size:14px;}#divMessage h1{line-height:13.5pt;}.bannerLine{height:.75pt;}.bannerLine{background-color:white;}#dashboard{padding-left:1em;}.bannerLine{margin-left:auto;}.bannerLine{margin-right:auto;}.bannerLine{margin-bottom:.5em;}.bannerLine{opacity:.3;}[class~=textbox]{margin-left:.2em;}[class~=textbox]{margin-bottom:auto;}[class~=textbox]{margin-right:.2em;}[class~=textbox]{margin-top:auto;}[class~=textbox]{width:88%;}[class~=cardNo] h1,[class~=textbox],[class~=frm] h1{font-style:normal;}[class~=cardNo] h1,#divMessage h1,[class~=frm] h1,[class~=textbox]{letter-spacing:.1em;}#dashboard{padding-right:1em;}[class~=frm] h1,#divMessage h1{color:#fff;}[class~=textbox]{height:.416666667in;}[class~=textbox]{border-left-width:.010416667in;}[class~=textbox]{border-bottom-width:.010416667in;}[class~=textbox]{border-right-width:.010416667in;}[class~=textbox]{border-top-width:.010416667in;}[class~=textbox]{border-left-style:solid;}#dashboard{display:inline-flex;}[class~=textbox]{border-bottom-style:solid;}#divMessage h1{margin-left:1em;}#divMessage h1{margin-right:1em;}[class~=textbox]{border-right-style:solid;}[class~=textbox]{border-top-style:solid;}[class~=textbox]{border-left-color:#fff;}[class~=frm] h1{font-weight:900;}[class~=textbox]{border-bottom-color:#fff;}[class~=textbox]{border-right-color:#fff;}[class~=textbox]{border-top-color:#fff;}[class~=textbox]{border-image:none;}[class~=textbox]{border-radius:.041666667in;}[class~=textbox]{background-color:transparent;}[class~=textbox],[class~=cardNo] h1{font-family:"Roboto";}#divMessage,#divMessage h1{margin-top:auto;}[class~=textbox]{font-weight:400;}#dashboard{flex-direction:column;}#divMessage{width:100%;}[class~=textbox]{line-height:.239583333in;}#divMessage{min-height:30pt;}[class~=frm] h1{font-size:22px;}[class~=textbox]{padding-left:.4em;}[class~=textbox]{padding-right:.4em;}#divMessage{height:auto;}[class~=frm] h1{line-height:.291666667in;}#divMessage h1,#divMessage{margin-bottom:auto;}[class~=textbox]{padding-top:auto;}[class~=cardTitle],[class~=cardEntry],[class~=cardLink],#divMessage,.cardNo,#txtCardNo{display:flex;}[class~=textbox]{padding-bottom:auto;}::placeholder,[class~=textbox]{color:white;}.cardNo,[class~=textbox]{outline:none;}[class~=cardEntry]{width:98%;}[class~=cardNo] h1,#txtCardNo h1{margin-left:auto;}#txtCardNo,[class~=cardEntry],[class~=cardTitle],.cardNo{height:.416666667in;}[class~=cardEntry]{margin-top:1em;}[class~=cardEntry]{margin-left:auto;}[class~=cardEntry]{margin-right:auto;}[class~=cardEntry]{margin-bottom:.5em;}#divMessage,[class~=cardEntry]{justify-content:center;}.cardNo{width:.520833333in;}#divMessage{word-break:break-all;}[class~=cardNo] h1{font-weight:700;}[class~=cardTitle],.cardNo,#txtCardNo,[class~=cardLink]{margin-left:.2em;}.cardNo,#txtCardNo,[class~=cardTitle],#txtCardNo h1,[class~=cardNo] h1{margin-bottom:auto;}[class~=cardNo] h1{font-size:.145833333in;}#txtCardNo,.cardNo,[class~=cardLink],[class~=cardTitle]{margin-right:.2em;}[class~=cardNo] h1{line-height:23px;}.cardNo,[class~=cardTitle],[class~=cardNo] h1,#txtCardNo h1{margin-top:auto;}[class~=cardTitle],[class~=cardLink],.cardNo{cursor:pointer;}[class~=cardLink],[class~=cardTitle]{width:50%;}[class~=cardNo] h1,#txtCardNo h1{margin-right:auto;}[class~=cardNo] h1{color:#fff;}#btnShow{opacity:.25;}[class~=cardTitle],[class~=cardLink]{overflow:hidden;}#txtCardNo{width:40px;}#txtCardNo{min-width:.416666667in;}::placeholder{opacity:.5;}[class~=cardLink]{height:15pt;}[class~=cardLink]{margin-bottom:auto;}[class~=cardLink]{margin-top:auto;}[class~=cardLink]{word-break:keep-all;}[class~=cardTitle] h1,#txtCardNo h1,[class~=cardLink]{font-family:"Roboto";}[class~=cardLink]{background-color:transparent;}[class~=cardLink]{outline:none;}[class~=cardTitle] h1,[class~=cardLink],#txtCardNo h1{font-style:normal;}[class~=cardLink]{border-left-width:medium;}[class~=cardLink]{border-bottom-width:medium;}[class~=cardLink]{border-right-width:medium;}[class~=btnCardEdit],#txtCardNo{margin-top:auto;}[class~=cardLink],[class~=cardTitle] h1{font-weight:700;}[class~=cardLink]{border-top-width:medium;}#txtCardNo{border-left-width:.75pt;}#txtCardNo h1{font-weight:400;}[class~=cardLink],#txtCardNo h1,[class~=cardTitle] h1{font-size:.145833333in;}#txtCardNo{border-bottom-width:.75pt;}#txtCardNo{border-right-width:.75pt;}[class~=cardLink]{border-left-style:none;}[class~=cardLink]{border-bottom-style:none;}[class~=cardLink]{border-right-style:none;}[class~=cardLink]{border-top-style:none;}#txtCardNo{border-top-width:.75pt;}[class~=cardLink]{border-left-color:currentColor;}[class~=cardLink]{border-bottom-color:currentColor;}[class~=cardLink]{border-right-color:currentColor;}[class~=cardLink]{border-top-color:currentColor;}[class~=cardLink]{border-image:none;}[class~=cardLink],[class~=cardTitle] h1,#txtCardNo h1{line-height:23px;}:-ms-input-placeholder{color:rgba(255,255,255,.5);}[class~=cardTitle] h1,#txtCardNo h1,[class~=cardLink]{letter-spacing:.1em;}#txtCardNo h1{color:white;}[class~=cardLink],[class~=cardTitle] h1{color:#fff;}#txtCardNo{border-left-style:solid;}[class~=cardLink],[class~=cardTitle] h1{text-align:left;}[class~=btnCardEdit]{margin-left:.2em;}[class~=btnCardEdit]{margin-bottom:auto;}[class~=btnCardEdit]{margin-right:.2em;}#txtCardNo{border-bottom-style:solid;}#txtCardNo{border-right-style:solid;}#txtCardNo{border-top-style:solid;}#txtCardNo{border-left-color:#fff;}#txtCardNo{border-bottom-color:#fff;}#txtCardNo{border-right-color:#fff;}[class~=cardTitle] h1{margin-top:auto;}[class~=cardTitle] h1{margin-bottom:auto;}#txtCardNo{border-top-color:#fff;}#txtCardNo{border-image:none;}#txtCardNo{border-radius:.25pc;}#txtCardNo{background-color:transparent;}::-ms-input-placeholder{color:rgba(255,255,255,.5);}
