--- a/css-j2bt6x/faculty.css
+++ b/css-j2bt6x/faculty.css
@@ -1,306 +1,2 @@
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: white;
-    opacity: 0.5; /* Firefox */
-  }
-  
-  :-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color: rgba(255, 255, 255, 0.5)
-  }
-  
-  ::-ms-input-placeholder { /* Microsoft Edge */
-    color: rgba(255, 255, 255, 0.5)
-  }
-
-#faculty {
-    width: 800px;
-    min-width: 320px;
-    margin:auto;
-    margin-top: 7.4em;
-    margin-bottom: 10vh;
-    height: auto;
-    padding-left: 1em;
-    padding-right: 1em;
-    display: inline-flex;
-    flex-direction: column;
-}
-
-#faculty img {
-    cursor: pointer;
-}
-
-.frm {
-    width: 100%;
-    min-height: 130px;
-    display: inline-flex;
-    flex-direction: column;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 3em;
-}
-
-.frm img {
-    object-fit: none;
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-.frm h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 22px;
-    line-height: 28px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-}
-
-.entry {
-    width: auto;
-    min-height: 140px;
-    height: auto;
-    border: 1px solid white;
-    border-radius: 6px;
-    margin-top: 0.5em;
-    padding-bottom: 0.5em;
-    background: rgba(0, 0, 0, 0.05);
-}
-
-.entryHeader {
-    display: flex;
-    width: 98%;
-    height: auto;
-    margin: auto;
-    margin-top: 1em;
-    justify-content: space-between;
-}
-
-
-.bannerLine {
-    width: 98%;
-    height: 1px;
-    background-color: white;
-    margin-top: 1em;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 0.5em;
-    opacity: .3;
-}
-
-#divMessage {
-    width: 100%;
-    height: 54px;
-    display: flex;
-    margin: 0.5em;
-}
-
-#divMessage h1{
-    margin: auto;
-    font-family: 'Roboto';
-    font-style: italic;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 28px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-}
-
-#btnShow {
-    opacity: .25;
-}
-
-
-#txtCourseNo {
-    display: flex;
-    width: 40px;
-    min-width: 40px;
-    height: 40px;
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-    border: 1px solid #FFFFFF;
-    border-radius: 4px;
-    background-color: transparent;
-}
-
-#txtCourseNo h1 {
-    margin: auto;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    color: white;
-}
-
-.textbox {
-    margin: auto;
-    width: 100%;
-    height: 40px;
-    border: 1px solid #FFFFFF;
-    border-radius: 4px;
-    background-color: transparent;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    padding-left: .4em;
-    padding-right: .4em;
-    padding-top: auto;
-    padding-bottom: auto;
-    color: white;
-    outline: none;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-#txtCardNo {
-    display: flex;
-    width: 40px;
-    min-width: 40px;
-    height: 40px;
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-    border: 1px solid #FFFFFF;
-    border-radius: 4px;
-    background-color: transparent;
-}
-
-.dropFaculty {
-    margin: auto;
-    width: 100%;
-    height: 42px;
-    border: 1px solid #FFFFFF;
-    border-radius: 4px;
-    background-color: transparent;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    padding-left: .4em;
-    padding-right: .4em;
-    padding-top: auto;
-    padding-bottom: auto;
-    color: white;
-    outline: none;
-    margin-left: .2em;
-    margin-right: .2em; 
-}
-
-.optionFaculty {
-    color: #303030;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 28px;
-    letter-spacing: 0.1em;
-    text-align: left;
-    padding-top: 1em;
-    padding-bottom: 1em;
-    
-}
-
-.facultyEntry {
-    display: flex;
-    width: 98%;
-    height: 40px;
-    margin-top: 1em;
-    margin-bottom: .5em;
-    margin-left: auto;
-    margin-right: auto;
-    justify-content: space-between;
-}
-
-.facultyEntry h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-    margin-top: auto;
-    margin-bottom: auto;
-    text-align: left;
-    
-}
-
-.courseNo {
-    margin-left: .2em;
-    margin-right: .2em;
-    width: 50px;
-    height: 42px;
-    outline: none;
-    display: flex;
-    background-color: transparent;
-}
-
-.facultyTitle {
-    width: 100%;
-    height: 40px;
-    margin-left: .2em;
-    margin-right: .2em;
-    margin-top: auto;
-    margin-bottom: auto;
-    display: flex;
-    overflow: hidden;
-    word-break:keep-all;
-}
-
-.facultyDesc {
-    width: 50%;
-    height: 40px;
-    margin-left: .2em;
-    margin-right: .2em;
-    margin-top: auto;
-    margin-bottom: auto;
-    display: flex;
-    overflow: hidden;
-    word-break:keep-all;
-}
-
-.facultyName {
-    width: 55%;
-    height: 40px;
-    margin-left: .2em;
-    margin-right: .2em;
-    margin-top: auto;
-    margin-bottom: auto;
-    display: flex;
-    overflow: hidden;
-    word-break:keep-all;
-}
-
-.facultyEmail {
-    width: 55%;
-    height: 40px;
-    margin-left: .2em;
-    margin-right: .2em;
-    margin-top: auto;
-    margin-bottom: auto;
-    display: flex;
-    overflow: hidden;
-    word-break:keep-all;
-}
-
-
-.btnDelCourse {
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-.btnDelAssignment {
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-
+/* OBFUSCATED BY CSSOBFUSCATOR.COM at 2023/08/09 00:59:28 */
+[class~=frm]{width:100%;}[class~=frm]{min-height:97.5pt;}.frm img{object-fit:none;}[class~=frm],#faculty{display:inline-flex;}[class~=frm],#faculty{flex-direction:column;}[class~=frm]{margin-left:auto;}[class~=frm]{margin-right:auto;}[class~=frm]{margin-bottom:3em;}[class~=entry]{width:auto;}[class~=entry]{min-height:140px;}[class~=entry],[class~=entryHeader],#faculty{height:auto;}[class~=entry]{border-left-width:.010416667in;}#faculty{width:50pc;}.frm img{margin-left:.2em;}#faculty{min-width:240pt;}[class~=entry]{border-bottom-width:.010416667in;}#divMessage h1,[class~=entryHeader],#faculty{margin-left:auto;}[class~=entry]{border-right-width:.010416667in;}[class~=entry]{border-top-width:.010416667in;}[class~=entryHeader],#divMessage h1,.frm img{margin-bottom:auto;}[class~=entry]{border-left-style:solid;}.frm img{margin-right:.2em;}[class~=entry]{border-bottom-style:solid;}[class~=entry]{border-right-style:solid;}#faculty{margin-bottom:10vh;}#faculty img{cursor:pointer;}[class~=entryHeader],#divMessage h1,#faculty{margin-right:auto;}[class~=entry]{border-top-style:solid;}[class~=entry]{border-left-color:white;}[class~=entry]{border-bottom-color:white;}#faculty{margin-top:7.4em;}::placeholder{color:white;}.frm img,#divMessage h1{margin-top:auto;}[class~=entry]{border-right-color:white;}[class~=entry]{border-top-color:white;}[class~=entry]{border-image:none;}#faculty{padding-left:1em;}[class~=entry]{border-radius:4.5pt;}[class~=entry]{margin-top:.5em;}#faculty{padding-right:1em;}[class~=entry]{padding-bottom:.5em;}[class~=entry]{background:rgba(0,0,0,.05);}#divMessage,[class~=entryHeader]{display:flex;}[class~=bannerLine],[class~=entryHeader]{width:98%;}[class~=entryHeader],[class~=bannerLine]{margin-top:1em;}[class~=entryHeader]{justify-content:space-between;}#divMessage h1,[class~=facultyEntry] h1,.frm h1,[class~=textbox]{font-family:"Roboto";}#divMessage,[class~=textbox]{width:100%;}[class~=bannerLine]{height:.010416667in;}[class~=bannerLine]{background-color:white;}[class~=bannerLine]{margin-left:auto;}[class~=bannerLine]{margin-right:auto;}[class~=bannerLine]{margin-bottom:.5em;}[class~=bannerLine]{opacity:.3;}#divMessage{height:54px;}[class~=textbox]{margin-left:.2em;}[class~=textbox]{margin-bottom:auto;}[class~=textbox],.frm h1{font-style:normal;}[class~=textbox]{margin-right:.2em;}[class~=textbox]{margin-top:auto;}.frm h1{font-weight:900;}#txtCourseNo,[class~=textbox]{height:2.5pc;}#divMessage h1{font-style:italic;}[class~=textbox]{border-left-width:.0625pc;}[class~=textbox]{border-bottom-width:.0625pc;}.frm h1{font-size:16.5pt;}#divMessage{margin-left:.5em;}[class~=textbox]{border-right-width:.0625pc;}::placeholder{opacity:.5;}[class~=textbox]{border-top-width:.0625pc;}[class~=textbox]{border-left-style:solid;}[class~=textbox]{border-bottom-style:solid;}[class~=textbox]{border-right-style:solid;}#divMessage{margin-bottom:.5em;}[class~=textbox]{border-top-style:solid;}[class~=textbox]{border-left-color:#fff;}#divMessage{margin-right:.5em;}[class~=textbox]{border-bottom-color:#fff;}[class~=textbox]{border-right-color:#fff;}[class~=textbox]{border-top-color:#fff;}[class~=textbox]{border-image:none;}[class~=textbox]{border-radius:.041666667in;}[class~=textbox]{background-color:transparent;}#divMessage{margin-top:.5em;}.frm h1,#divMessage h1{line-height:1.75pc;}#btnShow{opacity:.25;}#txtCourseNo{display:flex;}[class~=textbox]{font-weight:400;}[class~=textbox],#divMessage h1{font-size:.145833333in;}[class~=textbox]{line-height:.239583333in;}[class~=textbox],.frm h1,#divMessage h1,[class~=dropFaculty]{letter-spacing:.1em;}:-ms-input-placeholder{color:rgba(255,255,255,.5);}#txtCourseNo{width:30pt;}#divMessage h1,[class~=dropFaculty]{font-weight:700;}[class~=textbox]{padding-left:.4em;}[class~=textbox]{padding-right:.4em;}#txtCourseNo{min-width:30pt;}#txtCourseNo,[class~=dropFaculty]{margin-left:.2em;}[class~=dropFaculty],[class~=textbox]{padding-top:auto;}[class~=textbox]{padding-bottom:auto;}[class~=textbox]{color:white;}[class~=textbox]{outline:none;}[class~=dropFaculty],#txtCourseNo{margin-bottom:auto;}#txtCourseNo,[class~=dropFaculty]{margin-right:.2em;}[class~=dropFaculty],#txtCourseNo{margin-top:auto;}.frm h1{color:#fff;}[class~=dropFaculty]{width:100%;}[class~=dropFaculty]{height:42px;}#txtCourseNo,[class~=dropFaculty]{border-left-width:.75pt;}#txtCourseNo,[class~=dropFaculty]{border-bottom-width:.75pt;}#txtCourseNo,[class~=dropFaculty]{border-right-width:.75pt;}[class~=dropFaculty],#txtCourseNo{border-top-width:.75pt;}[class~=dropFaculty],#txtCourseNo{border-left-style:solid;}[class~=dropFaculty],#txtCourseNo{border-bottom-style:solid;}[class~=dropFaculty],#txtCourseNo{border-right-style:solid;}[class~=dropFaculty],#txtCourseNo{border-top-style:solid;}[class~=dropFaculty],#txtCourseNo{border-left-color:#fff;}[class~=dropFaculty],#txtCourseNo{border-bottom-color:#fff;}#txtCourseNo,[class~=dropFaculty]{border-right-color:#fff;}[class~=dropFaculty]{border-top-color:#fff;}[class~=dropFaculty]{border-image:none;}[class~=dropFaculty]{border-radius:4px;}[class~=dropFaculty]{background-color:transparent;}.optionFaculty,[class~=dropFaculty]{font-family:"Roboto";}[class~=facultyEntry] h1,.optionFaculty,[class~=dropFaculty]{font-style:normal;}[class~=dropFaculty],[class~=facultyEntry] h1{font-size:.145833333in;}[class~=facultyEntry] h1,[class~=dropFaculty]{line-height:.239583333in;}[class~=dropFaculty]{padding-left:.4em;}[class~=dropFaculty]{padding-right:.4em;}[class~=dropFaculty]{padding-bottom:auto;}::-ms-input-placeholder{color:rgba(255,255,255,.5);}[class~=dropFaculty]{color:white;}[class~=dropFaculty],.courseNo{outline:none;}[class~=facultyEntry] h1,.optionFaculty{font-weight:700;}.optionFaculty{color:#303030;}#divMessage h1{color:#fff;}.optionFaculty{font-size:12pt;}.optionFaculty{line-height:1.75pc;}[class~=facultyEntry] h1,.optionFaculty{letter-spacing:.1em;}.optionFaculty{text-align:left;}.optionFaculty{padding-top:1em;}.optionFaculty{padding-bottom:1em;}[class~=facultyDesc],#txtCardNo,[class~=facultyEntry],[class~=facultyTitle],[class~=facultyEmail],.courseNo,[class~=facultyName]{display:flex;}[class~=facultyEntry]{width:98%;}#txtCardNo,[class~=facultyEntry]{height:2.5pc;}[class~=facultyEntry]{margin-top:1em;}[class~=facultyEntry]{margin-bottom:.5em;}[class~=facultyEntry]{margin-left:auto;}[class~=facultyEntry]{margin-right:auto;}#txtCourseNo h1{margin-left:auto;}[class~=facultyEntry]{justify-content:space-between;}#txtCardNo,.btnDelAssignment,.courseNo,[class~=facultyDesc],[class~=facultyTitle],[class~=facultyEmail],[class~=facultyName],.btnDelCourse{margin-left:.2em;}#txtCardNo,.btnDelAssignment,.btnDelCourse,[class~=facultyEmail],[class~=facultyDesc],[class~=facultyTitle],[class~=facultyName],.courseNo{margin-right:.2em;}.courseNo{width:.520833333in;}#txtCourseNo{border-top-color:#fff;}.courseNo{height:.4375in;}#txtCardNo,#txtCourseNo h1{margin-bottom:auto;}#txtCourseNo{border-image:none;}#txtCourseNo,.courseNo{background-color:transparent;}[class~=facultyTitle]{width:100%;}[class~=facultyTitle],[class~=facultyName],[class~=facultyEmail],[class~=facultyDesc]{height:.416666667in;}[class~=facultyName],[class~=facultyEntry] h1,[class~=facultyDesc],[class~=facultyEmail],[class~=facultyTitle]{margin-top:auto;}[class~=facultyEmail],[class~=facultyDesc],[class~=facultyEntry] h1,[class~=facultyTitle],[class~=facultyName]{margin-bottom:auto;}[class~=facultyDesc],[class~=facultyEmail],[class~=facultyTitle],[class~=facultyName]{overflow:hidden;}[class~=facultyEmail],[class~=facultyDesc],[class~=facultyName],[class~=facultyTitle]{word-break:keep-all;}#txtCourseNo{border-radius:.041666667in;}[class~=facultyDesc]{width:50%;}#txtCourseNo h1{margin-right:auto;}#txtCardNo{width:2.5pc;}#txtCardNo{min-width:40px;}[class~=facultyEntry] h1{color:#fff;}[class~=facultyEmail],[class~=facultyName]{width:55%;}#txtCourseNo h1,.btnDelCourse,.btnDelAssignment,#txtCardNo{margin-top:auto;}#txtCardNo{border-left-width:.010416667in;}[class~=facultyEntry] h1{text-align:left;}#txtCardNo{border-bottom-width:.010416667in;}#txtCardNo{border-right-width:.010416667in;}.btnDelCourse,.btnDelAssignment{margin-bottom:auto;}#txtCardNo{border-top-width:.010416667in;}#txtCardNo{border-left-style:solid;}#txtCardNo{border-bottom-style:solid;}#txtCardNo{border-right-style:solid;}#txtCardNo{border-top-style:solid;}#txtCourseNo h1{font-family:"Roboto";}#txtCardNo{border-left-color:#fff;}#txtCourseNo h1{font-style:normal;}#txtCardNo{border-bottom-color:#fff;}#txtCardNo{border-right-color:#fff;}#txtCardNo{border-top-color:#fff;}#txtCardNo{border-image:none;}#txtCardNo{border-radius:3pt;}#txtCardNo{background-color:transparent;}#txtCourseNo h1{font-weight:400;}#txtCourseNo h1{font-size:10.5pt;}#txtCourseNo h1{line-height:1.4375pc;}#txtCourseNo h1{letter-spacing:.1em;}#txtCourseNo h1{color:white;}
