--- a/css-j2bt6x/home.css
+++ b/css-j2bt6x/home.css
@@ -1,104 +1,2 @@
-
-
-#newBody {
-    flex-grow: 1;
-    min-width: 320px;
-    max-width: 70vw;
-    height: auto;
-    margin-top: 14vh;
-    margin-bottom: 10vh;
-    margin-right: auto;
-    margin-left: auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    aspect-ratio: 2/1;
-}
-
-#leftCard {
-    flex-grow: 1;
-    width: 20%;
-    min-width: 320px;
-    margin-left: 1em;
-    margin-right: 1em;
-    display: flex;
-    flex-direction: column;
-    aspect-ratio: 1/1;
-}
-
-#homeTitle {
-    width: 100%;
-    aspect-ratio: 2/1;
-    margin-top: auto;
-    margin-bottom: auto;
-    height: 44%;
-    word-wrap: break-word;
-    display: flex;
-}
-
-#homeTitle p {
-    color: white;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 5.42vmax;
-    line-height: 100%;
-    cursor: default;
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
-#homeDesc {
-    width: 100%;
-    height: 10vmax;
-    min-height: 25%;
-    word-wrap: break-word;
-    display: flex;
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
-#homeDesc p {
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 1.6vmax;
-    line-height: 140%;
-    color: #FFFFFF;
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
-#btnEnroll {
-    border: 3px solid #FFFFFF;
-    border-radius: 99px;
-    width: 98%;
-    height: 4vmax;
-    display: flex;
-    margin-top: auto;
-    margin-bottom: auto;
-    cursor: pointer;
-}
-
-#btnEnroll h1 {
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 2vmax;
-    line-height: 100%;
-    color: #FFFFFF;
-    margin: auto;
-}
-
-#rightCard {
-    flex-grow: 1;
-    width: 20%;
-    min-width: 320px;
-    margin-left: 1em;
-    margin-right: 1em;
-    aspect-ratio: 1/1;
-    border: 1px solid white;
-    border-radius: 6px;
-    margin-top: 1em;
-    margin-bottom: 1em;
-}
+/* OBFUSCATED BY CSSOBFUSCATOR.COM at 2023/08/09 00:59:45 */
+#leftCard,#newBody{flex-grow:1;}#leftCard,#newBody{min-width:240pt;}#newBody{max-width:70vw;}#newBody{height:auto;}#newBody{margin-top:14vh;}#homeTitle p{color:white;}#newBody{margin-bottom:10vh;}#newBody{margin-right:auto;}#newBody{margin-left:auto;}#homeDesc,#leftCard,#newBody,#homeTitle{display:flex;}#newBody{flex-wrap:wrap;}#newBody{justify-content:center;}#newBody{aspect-ratio:2/1;}#leftCard{width:20%;}#homeDesc p,#homeTitle p{font-family:"Poppins";}#leftCard{margin-left:1em;}#leftCard{margin-right:1em;}#leftCard{flex-direction:column;}#homeDesc p,#homeTitle p{font-style:normal;}#leftCard{aspect-ratio:1/1;}#homeDesc,#homeTitle{width:100%;}#homeTitle{aspect-ratio:2/1;}#homeTitle,#homeDesc,#homeTitle p,#btnEnroll,#homeDesc p{margin-top:auto;}#homeTitle,#homeTitle p,#homeDesc,#btnEnroll,#homeDesc p{margin-bottom:auto;}#homeTitle{height:44%;}#homeTitle p{font-weight:700;}#homeTitle,#homeDesc{word-wrap:break-word;}#homeTitle p{font-size:5.42vm ax;}#homeDesc{height:10vm ax;}#homeDesc{min-height:25%;}#homeTitle p{line-height:100%;}#homeTitle p{cursor:default;}#btnEnroll{border-left-width:2.25pt;}#btnEnroll{border-bottom-width:2.25pt;}#btnEnroll{border-right-width:2.25pt;}#btnEnroll{border-top-width:2.25pt;}#btnEnroll{border-left-style:solid;}#btnEnroll{border-bottom-style:solid;}#btnEnroll{border-right-style:solid;}#btnEnroll{border-top-style:solid;}#btnEnroll{border-left-color:#fff;}#btnEnroll{border-bottom-color:#fff;}#btnEnroll{border-right-color:#fff;}#btnEnroll{border-top-color:#fff;}#homeDesc p{font-weight:300;}#btnEnroll{border-image:none;}#homeDesc p{font-size:1.6vm ax;}#btnEnroll{border-radius:99px;}#btnEnroll{width:98%;}#btnEnroll{height:4vm ax;}#btnEnroll{display:flex;}#homeDesc p{line-height:140%;}#btnEnroll h1,#homeDesc p{color:#fff;}#btnEnroll{cursor:pointer;}#rightCard{flex-grow:1;}#rightCard{width:20%;}#rightCard{min-width:20pc;}#rightCard{margin-left:1em;}#rightCard{margin-right:1em;}#btnEnroll h1{font-family:"Poppins";}#rightCard{aspect-ratio:1/1;}#rightCard{border-left-width:.75pt;}#rightCard{border-bottom-width:.75pt;}#rightCard{border-right-width:.75pt;}#rightCard{border-top-width:.75pt;}#rightCard{border-left-style:solid;}#rightCard{border-bottom-style:solid;}#rightCard{border-right-style:solid;}#btnEnroll h1{font-style:normal;}#btnEnroll h1{font-weight:700;}#btnEnroll h1{font-size:2vm ax;}#rightCard{border-top-style:solid;}#rightCard{border-left-color:white;}#rightCard{border-bottom-color:white;}#rightCard{border-right-color:white;}#btnEnroll h1{line-height:100%;}#rightCard{border-top-color:white;}#rightCard{border-image:none;}#rightCard{border-radius:.0625in;}#rightCard{margin-top:1em;}#rightCard{margin-bottom:1em;}#btnEnroll h1{margin-left:auto;}#btnEnroll h1{margin-bottom:auto;}#btnEnroll h1{margin-right:auto;}#btnEnroll h1{margin-top:auto;}
