--- a/css-j2bt6x/menu.css
+++ b/css-j2bt6x/menu.css
@@ -1,67 +1,2 @@
-#menu {
-    height: 100vh;
-    width: 160px;
-    z-index: 9;
-    position: fixed;
-    transform: translateX(100vw);
-    background-color: #252525;
-}
-
-.menuLine {
-    width: 100%;
-    height: 1px;
-    background-color: #303030;
-}
-
-#boxAll {
-    margin-top: 4.5vh;
-}
-
-.boxMenu {
-    display: flex;
-    width: 100%;
-    height: 80px;
-    text-align: left;
-    cursor: pointer;
-
-}
-
-.boxMenu h1 {
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-left: 25%;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 21px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-    opacity: 0.35;
-}
-
-
-.boxMenu:hover h1 {
-    color: #FFFFFF;
-    opacity: 1;
-}
-
-#black {
-    z-index: 7;
-    opacity: .2;
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    visibility: hidden;
-    background-color: black;
-    transition: opacity .5s;
-}
-
-#black iframe {
-    margin: auto;
-    width: 640px;
-    height: 360px;
-    border: none;
-    
-}
+/* OBFUSCATED BY CSSOBFUSCATOR.COM at 2023/08/09 01:00:37 */
+#black iframe{margin-left:auto;}#black iframe{margin-bottom:auto;}[class~=boxMenu],[class~=menuLine]{width:100%;}#menu,#black{height:100vh;}#menu{width:160px;}#black iframe{margin-right:auto;}#black iframe{margin-top:auto;}#black iframe{width:640px;}#menu{z-index:9;}#black iframe{height:270pt;}#black iframe{border-left-width:medium;}#black iframe{border-bottom-width:medium;}#black iframe{border-right-width:medium;}#black iframe{border-top-width:medium;}#black,#menu{position:fixed;}#black iframe{border-left-style:none;}#menu{transform:translateX(100vw);}#menu{background-color:#252525;}#boxAll{margin-top:4.5vh;}#black iframe{border-bottom-style:none;}[class~=menuLine]{height:.010416667in;}#black iframe{border-right-style:none;}#black{z-index:7;}#black{opacity:.2;}[class~=boxMenu],#black{display:flex;}#black iframe{border-top-style:none;}[class~=menuLine]{background-color:#303030;}[class~=boxMenu] h1,[class~=boxMenu]:hover h1{color:#fff;}#black{width:100vw;}#black iframe{border-left-color:currentColor;}[class~=boxMenu] h1{margin-top:auto;}#black iframe{border-bottom-color:currentColor;}[class~=boxMenu] h1{margin-bottom:auto;}#black iframe{border-right-color:currentColor;}[class~=boxMenu] h1{margin-left:25%;}[class~=boxMenu] h1{font-family:"Roboto";}#black iframe{border-top-color:currentColor;}#black iframe{border-image:none;}[class~=boxMenu] h1{font-style:normal;}[class~=boxMenu] h1{font-weight:700;}[class~=boxMenu]{height:5pc;}#black{visibility:hidden;}#black{background-color:black;}[class~=boxMenu] h1{font-size:.145833333in;}#black{transition:opacity .5s;}[class~=boxMenu] h1{line-height:15.75pt;}[class~=boxMenu]{text-align:left;}[class~=boxMenu]{cursor:pointer;}[class~=boxMenu]:hover h1{opacity:1;}[class~=boxMenu] h1{letter-spacing:.1em;}[class~=boxMenu] h1{opacity:.35;}
