--- a/css-j2bt6x/resources.css
+++ b/css-j2bt6x/resources.css
@@ -1,381 +1,2 @@
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: white;
-    opacity: 0.5; /* Firefox */
-  }
-  
-  :-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color: rgba(255, 255, 255, 0.5)
-  }
-  
-  ::-ms-input-placeholder { /* Microsoft Edge */
-    color: rgba(255, 255, 255, 0.5)
-  }
-
-#resources {
-    width: 800px;
-    min-width: 320px;
-    margin:auto;
-    margin-top: 7.4em;
-    margin-bottom: 10vh;
-    height: auto;
-    padding-left: 1em;
-    padding-right: 1em;
-    display: inline-flex;
-    flex-direction: column;
-}
-
-#resources img {
-    cursor: pointer;
-}
-
-.dropHeader {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 3em;
-}
-
-#dropCourse {
-    width: 49%;
-    height: 50px;
-    outline: none;
-    background: rgba(0, 0, 0, 0.05);
-    border: 1px white solid;
-    border-radius: 6px;
-
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 28px;
-    letter-spacing: 0.1em;
-    color: white;
-    text-align: center;
-}
-
-#dropBatch {
-    width: 49%;
-    height: 50px;
-    outline: none;
-    background: rgba(0, 0, 0, 0.05);
-    border: 1px white solid;
-    border-radius: 6px;
-
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 28px;
-    letter-spacing: 0.1em;
-    color: white;
-    text-align: center;
-}
-
-
-.dropOption {
-    color: #303030;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 28px;
-    letter-spacing: 0.1em;
-    text-align: center;
-    padding-top: 1em;
-    padding-bottom: 1em;
-
-}
-
-.frm {
-    width: 100%;
-    height: auto;
-    display: inline-flex;
-    flex-direction: column;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 3em;
-}
-
-.frm img {
-    object-fit: none;
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-.frm h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 22px;
-    line-height: 28px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-}
-
-
-.entry {
-
-    width: auto;
-    min-height: 130px;
-    height: auto;
-    border: 1px solid white;
-    border-radius: 6px;
-    margin-top: 0.5em;
-    background: rgba(0, 0, 0, 0.05);
-}
-
-.entryHeader {
-    display: flex;
-    width: 98%;
-    height: auto;
-    margin: auto;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    justify-content: space-between;
-}
-
-
-.bannerLine {
-    width: 98%;
-    height: 1px;
-    background-color: white;
-    margin-left: auto;
-    margin-right: auto;
-    opacity: .3;
-}
-
-.textbox {
-    margin: auto;
-    width: 94%;
-    height: 40px;
-    border: 1px solid #FFFFFF;
-    border-radius: 4px;
-    background-color: transparent;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    padding-left: .4em;
-    padding-right: .4em;
-    padding-top: auto;
-    padding-bottom: auto;
-    color: white;
-    outline: none;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-
-.resourcesEntry {
-    display: flex;
-    width: 98%;
-    height: 40px;
-    margin-top: .5em;
-    margin-bottom: .5em;
-    margin-left: auto;
-    margin-right: auto;
-    justify-content: space-between;
-}
-
-.resourcesEntry h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-    margin-top: auto;
-    margin-bottom: auto;
-    text-align: left;
-}
-
-
-.resourcesDesc {
-    width: 50%;
-    height: 40px;
-    display: flex;
-    overflow: hidden;
-    word-break:keep-all;
-}
-
-
-.trainingVideoEntry {
-    display: flex;
-    width: 98%;
-    height: 40px;
-    margin-top: .5em;
-    margin-bottom: .5em;
-    margin-left: auto;
-    margin-right: auto;
-    justify-content: space-between;
-}
-
-.trainingVideoEntry h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-    margin-top: auto;
-    margin-bottom: auto;
-    text-align: left;
-    cursor: pointer;
-}
-
-.trainingVideoTitle {
-    width: 50%;
-    height: 40px;
-    display: flex;
-    overflow: hidden;
-    word-break:keep-all;
-}
-
-.trainingVideoViews {
-    width: 45%;
-    height: 40px;
-    display: flex;
-    overflow: hidden;
-    word-break:keep-all;
-}
-
-.otherVideosEntry {
-    display: flex;
-    width: 98%;
-    height: 40px;
-    margin-top: .5em;
-    margin-bottom: .5em;
-    margin-left: auto;
-    margin-right: auto;
-    justify-content: space-between;
-}
-
-.otherVideosEntry h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-    margin-top: auto;
-    margin-bottom: auto;
-    text-align: left;
-    cursor: pointer;
-}
-
-
-.otherVideosTitle {
-    width: 50%;
-    height: 40px;
-    display: flex;
-    overflow: hidden;
-}
-
-
-.otherVideosViews {
-    width: 45%;
-    height: 40px;
-    display: flex;
-    overflow: hidden;
-}
-
-.basicFilesEntry {
-    display: flex;
-    width: 98%;
-    height: 40px;
-    margin-top: .5em;
-    margin-bottom: .5em;
-    margin-left: auto;
-    margin-right: auto;
-    justify-content: space-between;
-}
-
-.basicFilesEntry h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-    margin-top: auto;
-    margin-bottom: auto;
-    text-align: left;
-    cursor: pointer;
-}
-
-.basicFilesTitle {
-    width: 50%;
-    height: 40px;
-    display: flex;
-    overflow: hidden;
-    word-break:keep-all;
-}
-
-.basicFilesDownloads {
-    width: 45%;
-    height: 40px;
-    display: flex;
-    overflow: hidden;
-    word-break:keep-all;
-}
-
-
-.imgResources {
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-.btnPlayTrainingVideo {
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-    
-}
-
-.btnDelTrainingVideo {
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-.btnPlayOtherVideos {
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-.btnDelOtherVideos {
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-.btnDownloadBasicFiles {
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-.btnDelBasicFiles {
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-.clickLines {
-    width: 98%;
-    height: 1px;
-    background-color: white;
-    margin: auto;
-    opacity: .3;
-}
-
-
-
+/* OBFUSCATED BY CSSOBFUSCATOR.COM at 2023/08/09 01:00:49 */
+[class~=dropHeader]{display:flex;}#resources{width:50pc;}[class~=dropHeader]{justify-content:space-between;}.frm img{object-fit:none;}[class~=frm],[class~=dropHeader]{margin-bottom:3em;}.dropOption{color:#303030;}.frm img{margin-left:.2em;}[class~=resourcesEntry] h1,.dropOption,[class~=frm] h1{font-family:"Roboto";}#resources{min-width:240pt;}[class~=frm] h1,.dropOption,[class~=resourcesEntry] h1{font-style:normal;}.dropOption{font-weight:700;}.frm img{margin-bottom:auto;}.dropOption{font-size:.145833333in;}[class~=frm] h1,.dropOption{line-height:.291666667in;}[class~=frm] h1,.dropOption{letter-spacing:.1em;}#resources{margin-left:auto;}.dropOption{text-align:center;}.dropOption{padding-top:1em;}.dropOption{padding-bottom:1em;}[class~=frm]{width:100%;}#resources{margin-bottom:10vh;}.entryHeader,#resources,.entry,[class~=frm]{height:auto;}.frm img{margin-right:.2em;}[class~=frm],#resources{display:inline-flex;}#resources img{cursor:pointer;}#resources{margin-right:auto;}#resources,[class~=frm]{flex-direction:column;}[class~=frm]{margin-left:auto;}[class~=frm]{margin-right:auto;}.frm img{margin-top:auto;}.entry{width:auto;}.entry{min-height:1.354166667in;}#dropCourse,.entry{border-left-width:.0625pc;}.entry,#dropCourse{border-bottom-width:.0625pc;}#resources{margin-top:7.4em;}.entry{border-right-width:.0625pc;}.entry{border-top-width:.0625pc;}#resources{padding-left:1em;}.entry{border-left-style:solid;}.entry{border-bottom-style:solid;}.entry{border-right-style:solid;}[class~=frm] h1{font-weight:900;}[class~=frm] h1{font-size:.229166667in;}[class~=frm] h1,[class~=resourcesEntry] h1{color:#fff;}.entry,#dropCourse{border-top-style:solid;}#resources{padding-right:1em;}.entry{border-left-color:white;}[class~=resourcesEntry] h1{font-weight:700;}.entry{border-bottom-color:white;}.entry{border-right-color:white;}.entry{border-top-color:white;}.entry{border-image:none;}.entry{border-radius:.0625in;}[class~=resourcesEntry] h1{font-size:10.5pt;}.entry{margin-top:.5em;}#dropCourse,.entry{background:rgba(0,0,0,.05);}.entryHeader{display:flex;}#dropCourse{width:49%;}[class~=resourcesEntry] h1,.trainingVideoEntry h1{line-height:23px;}.bannerLine,.entryHeader{width:98%;}#dropCourse{height:50px;}#dropCourse{outline:none;}.entryHeader{margin-left:auto;}.entryHeader{margin-bottom:1em;}.entryHeader{margin-right:auto;}.entryHeader{margin-top:1em;}.entryHeader{justify-content:space-between;}.bannerLine{height:.0625pc;}.bannerLine{background-color:white;}.bannerLine{margin-left:auto;}.bannerLine{margin-right:auto;}[class~=resourcesEntry] h1,.trainingVideoEntry h1{letter-spacing:.1em;}.bannerLine{opacity:.3;}#dropCourse,[class~=textbox]{border-right-width:.75pt;}[class~=resourcesEntry] h1,.trainingVideoEntry h1{margin-top:auto;}[class~=textbox]{margin-left:.2em;}[class~=textbox]{margin-bottom:auto;}#dropCourse,[class~=textbox]{border-top-width:.75pt;}[class~=textbox]{margin-right:.2em;}[class~=textbox],#dropCourse{border-left-style:solid;}[class~=textbox]{margin-top:auto;}[class~=textbox]{width:94%;}#dropCourse,[class~=textbox]{border-bottom-style:solid;}[class~=textbox]{height:.416666667in;}[class~=textbox],#dropCourse{border-right-style:solid;}[class~=textbox]{border-left-width:.0625pc;}.trainingVideoEntry h1,[class~=resourcesEntry] h1{margin-bottom:auto;}[class~=textbox]{border-bottom-width:.0625pc;}#dropCourse{border-left-color:white;}#dropCourse{border-bottom-color:white;}[class~=resourcesEntry] h1,.trainingVideoEntry h1{text-align:left;}#dropCourse,.trainingVideoEntry h1,[class~=textbox],.otherVideosEntry h1{font-family:"Roboto";}[class~=textbox],::placeholder{color:white;}[class~=textbox],.otherVideosEntry h1,#dropCourse,.trainingVideoEntry h1{font-style:normal;}.trainingVideoEntry h1,#dropCourse{font-weight:700;}[class~=textbox],.trainingVideoEntry h1{font-size:.145833333in;}#dropCourse{border-right-color:white;}#dropCourse{border-top-color:white;}#dropCourse{border-image:none;}#dropCourse{border-radius:.375pc;}.trainingVideoEntry h1{color:#fff;}[class~=textbox]{border-top-style:solid;}[class~=textbox]{border-left-color:#fff;}[class~=textbox]{border-bottom-color:#fff;}[class~=textbox]{border-right-color:#fff;}[class~=textbox]{border-top-color:#fff;}[class~=textbox]{border-image:none;}[class~=textbox]{border-radius:4px;}[class~=textbox]{background-color:transparent;}[class~=textbox]{font-weight:400;}[class~=textbox]{line-height:23px;}#dropCourse,[class~=textbox]{letter-spacing:.1em;}[class~=textbox]{padding-left:.4em;}[class~=textbox]{padding-right:.4em;}[class~=textbox]{padding-top:auto;}[class~=textbox]{padding-bottom:auto;}[class~=textbox]{outline:none;}[class~=resourcesDesc],[class~=otherVideosViews],[class~=otherVideosEntry],[class~=trainingVideoTitle],[class~=trainingVideoEntry],[class~=resourcesEntry],[class~=trainingVideoViews],[class~=otherVideosTitle]{display:flex;}[class~=resourcesEntry]{width:98%;}[class~=resourcesDesc],[class~=trainingVideoEntry],[class~=trainingVideoViews],[class~=resourcesEntry],[class~=otherVideosViews],[class~=trainingVideoTitle],[class~=otherVideosEntry],[class~=otherVideosTitle]{height:2.5pc;}[class~=otherVideosEntry],[class~=trainingVideoEntry],[class~=resourcesEntry],[class~=basicFilesEntry]{margin-top:.5em;}[class~=basicFilesEntry],[class~=trainingVideoEntry],[class~=resourcesEntry],[class~=otherVideosEntry]{margin-bottom:.5em;}[class~=resourcesEntry],[class~=basicFilesEntry],[class~=otherVideosEntry],[class~=trainingVideoEntry]{margin-left:auto;}[class~=resourcesEntry],[class~=trainingVideoEntry]{margin-right:auto;}[class~=basicFilesEntry],[class~=trainingVideoEntry],[class~=otherVideosEntry],[class~=resourcesEntry]{justify-content:space-between;}[class~=resourcesDesc]{width:50%;}[class~=otherVideosTitle],[class~=trainingVideoViews],[class~=trainingVideoTitle],[class~=resourcesDesc]{overflow:hidden;}[class~=trainingVideoViews],[class~=resourcesDesc],[class~=trainingVideoTitle]{word-break:keep-all;}[class~=trainingVideoEntry]{width:98%;}#dropCourse,.otherVideosEntry h1{font-size:10.5pt;}#dropCourse{line-height:21pt;}.trainingVideoEntry h1{cursor:pointer;}.otherVideosEntry h1{font-weight:700;}[class~=trainingVideoTitle]{width:50%;}#dropCourse{color:white;}#dropCourse{text-align:center;}#dropBatch{width:49%;}::placeholder{opacity:.5;}[class~=trainingVideoViews]{width:45%;}.otherVideosEntry h1{line-height:23px;}#dropBatch{height:50px;}[class~=otherVideosEntry]{width:98%;}#dropBatch{outline:none;}.otherVideosEntry h1,[class~=basicFilesEntry] h1{letter-spacing:.1em;}.otherVideosEntry h1,[class~=basicFilesEntry] h1{color:#fff;}#dropBatch{background:rgba(0,0,0,.05);}[class~=otherVideosEntry],[class~=basicFilesEntry]{margin-right:auto;}[class~=otherVideosTitle]{width:50%;}#dropBatch{border-left-width:.010416667in;}.otherVideosEntry h1{margin-top:auto;}#dropBatch{border-bottom-width:.010416667in;}#dropBatch{border-right-width:.010416667in;}[class~=otherVideosViews]{width:45%;}#dropBatch{border-top-width:.010416667in;}.otherVideosEntry h1{margin-bottom:auto;}.otherVideosEntry h1{text-align:left;}#dropBatch{border-left-style:solid;}[class~=basicFilesDownloads],[class~=otherVideosViews],[class~=basicFilesTitle]{overflow:hidden;}#dropBatch{border-bottom-style:solid;}[class~=basicFilesDownloads],[class~=basicFilesEntry],[class~=basicFilesTitle]{display:flex;}[class~=basicFilesEntry]{width:98%;}[class~=basicFilesDownloads],[class~=basicFilesEntry],[class~=basicFilesTitle]{height:40px;}.otherVideosEntry h1,[class~=basicFilesEntry] h1{cursor:pointer;}[class~=basicFilesEntry] h1{font-family:"Roboto";}[class~=basicFilesEntry] h1{font-style:normal;}[class~=basicFilesTitle]{width:50%;}[class~=basicFilesEntry] h1{font-weight:700;}[class~=basicFilesEntry] h1{font-size:14px;}[class~=basicFilesEntry] h1{line-height:23px;}#dropBatch{border-right-style:solid;}[class~=basicFilesTitle],[class~=basicFilesDownloads]{word-break:keep-all;}[class~=basicFilesDownloads]{width:45%;}#dropBatch{border-top-style:solid;}.btnPlayOtherVideos,[class~=imgResources],[class~=btnDelTrainingVideo],[class~=btnDownloadBasicFiles],.btnDelBasicFiles,[class~=btnPlayTrainingVideo],[class~=btnDelOtherVideos]{margin-left:.2em;}[class~=btnDelTrainingVideo],.btnDelBasicFiles,.clickLines,[class~=btnDownloadBasicFiles],[class~=btnDelOtherVideos],[class~=imgResources],[class~=btnPlayTrainingVideo],.btnPlayOtherVideos{margin-bottom:auto;}[class~=btnPlayTrainingVideo],[class~=btnDelOtherVideos],.btnDelBasicFiles,.btnPlayOtherVideos,[class~=imgResources],[class~=btnDelTrainingVideo],[class~=btnDownloadBasicFiles]{margin-right:.2em;}[class~=btnPlayTrainingVideo],[class~=btnDelTrainingVideo],.btnDelBasicFiles,[class~=btnDelOtherVideos],[class~=btnDownloadBasicFiles],[class~=imgResources],.clickLines,.btnPlayOtherVideos{margin-top:auto;}#dropBatch{border-left-color:white;}#dropBatch{border-bottom-color:white;}#dropBatch{border-right-color:white;}[class~=basicFilesEntry] h1{margin-top:auto;}[class~=basicFilesEntry] h1{margin-bottom:auto;}#dropBatch{border-top-color:white;}[class~=basicFilesEntry] h1{text-align:left;}#dropBatch{border-image:none;}#dropBatch{border-radius:.375pc;}.clickLines{width:98%;}.clickLines{height:.010416667in;}.clickLines{background-color:white;}.clickLines{margin-left:auto;}.clickLines{margin-right:auto;}#dropBatch{font-family:"Roboto";}#dropBatch{font-style:normal;}.clickLines{opacity:.3;}#dropBatch{font-weight:700;}#dropBatch{font-size:.875pc;}#dropBatch{line-height:.291666667in;}#dropBatch{letter-spacing:.1em;}#dropBatch{color:white;}#dropBatch{text-align:center;}:-ms-input-placeholder{color:rgba(255,255,255,.5);}::-ms-input-placeholder{color:rgba(255,255,255,.5);}
