--- a/css-j2bt6x/style.css
+++ b/css-j2bt6x/style.css
@@ -1,163 +1,2 @@
-*{
-    margin:0;
-    padding:0;
-
-}
-
-a:link {
-    color: white;
-  }
-  
-  /* visited link */
-  a:visited {
-    color: white;
-  }
-  
-  /* mouse over link */
-  a:hover {
-    color: white;
-  }
-  
-  /* selected link */
-  a:active {
-    color: white;
-  }
-
-body {
-	overflow-x: hidden;
-  overflow-y: auto;
-  background-image: linear-gradient(180deg, rgba(61, 39, 148 ,1), rgba(109,196,245, 1)); 
-}
-
-
-/* width */
-body::-webkit-scrollbar {
-	width: 1px;
-  }
-  
-  /* Track */
-body::-webkit-scrollbar-track {
-	background: #303030;
-  }
-  
-  /* Handle */
-body::-webkit-scrollbar-thumb {
-	background: #313131;
-	border-radius: 100px;
-  }
-  
-body::-webkit-scrollbar-thumb:hover {
-	background: #505050;
-	border-radius: 100px;
-  }
-
-#header {
-    z-index: 10;
-    width: 100%;
-    height: 80px;
-    display: flex;
-    position: fixed;
-}
-
-#div1 {
-    height: 80px;
-    width: 80px;
-    min-width: 80px;
-    max-width: 80px;
-    display: flex;
-    background-color: #303030;
-}
-
-#div1 img {
-    max-width: 64px;
-    max-height: 61px;
-    margin-left: auto;
-    margin-right: auto;
-    cursor: pointer;
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
-#div2 {
-    min-width: 23px;
-    max-width: 23px;
-}
-
-#div3 {
-    width: 100%;
-    height: 40px;
-    display: flex;
-    position: fixed;
-    z-index: 10;
-    background-color: #303030;
-}
-
-#div3 img {
-    margin-left: auto;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-right: 8px;
-    cursor: pointer;
-}
-
-#divBanner {
-    z-index: 7;
-    margin-top: 40px;
-    height: 30px;
-    width: 100%;
-    display: flex;
-    overflow: hidden;
-    background-color: #3A2D8C;
-    visibility: hidden;
-    position: fixed;
-}
-
-#bannerContainer {
-    width: auto;
-    height: auto;
-    display: flex;
-}
-
-#pBanner {
-    font-family: 'Roboto';
-    font-size: 14px;
-    font-weight: 400; 
-    margin-top: auto;
-    margin-bottom: auto;
-    color: white;
-    
-}
-
-#bodyBlue {
-    z-index: 0;
-    width: 100%;
-    min-height: 97vh;
-    display: flex;
-    visibility: hidden;
-    flex-wrap: wrap;
-    background-image: linear-gradient(180deg, rgba(61, 39, 148 ,1), rgba(109,196,245, 1)); 
-}
-
-
-#footer {
-    z-index: 9;
-    height: 3vh;
-    width: 100%;
-    display: flex;
-    top: 97vh;
-    position: fixed;
-    background-color: #303030;
-}
-
-#footer p {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: auto;
-    margin-bottom: auto;
-    font-family: 'Poppins';
-    font-size: 10px;
-    font-weight: 500;
-    color: #888888;
-    letter-spacing: 2px;
-}
-
+/* OBFUSCATED BY CSSOBFUSCATOR.COM at 2023/08/09 01:00:57 */
+a:visited,a:hover,a:link,a:active{color:white;}*{margin-left:0;}#div1 img{max-width:64px;}#div3,#header{z-index:10;}*{margin-bottom:0;}#div1 img{max-height:45.75pt;}#header{width:100%;}#div1,#header{height:80px;}#bodyBlue,#div3,#divBanner,#header,#div1,#footer,#bannerContainer{display:flex;}#footer,#header,#div3,#divBanner{position:fixed;}*{margin-right:0;}*{margin-top:0;}body{overflow-x:hidden;}#div1{width:80px;}#div1{min-width:.833333333in;}#div3 img,#div1 img{margin-left:auto;}body{overflow-y:auto;}body{background-image:linear-gradient(180deg,rgba(61,39,148,1),rgba(109,196,245,1));}#div1{max-width:.833333333in;}#div1 img{margin-right:auto;}*{padding-left:0;}#div1,#div3{background-color:#303030;}#div2{min-width:.239583333in;}#div2{max-width:1.4375pc;}#div3 img,#div1 img{cursor:pointer;}#div1 img,#div3 img{margin-top:auto;}#div3 img,#footer p,#div1 img,#pBanner{margin-bottom:auto;}#divBanner,#div3{width:100%;}*{padding-bottom:0;}#div3{height:30pt;}body::-webkit-scrollbar-thumb:hover{background:#505050;}#divBanner{z-index:7;}#divBanner{margin-top:40px;}*{padding-right:0;}#divBanner{height:.3125in;}#divBanner{overflow:hidden;}#divBanner{background-color:#3a2d8c;}#bodyBlue,#divBanner{visibility:hidden;}#div3 img{margin-right:6pt;}#bannerContainer{width:auto;}body::-webkit-scrollbar-thumb:hover{border-radius:100px;}#bannerContainer{height:auto;}#pBanner{font-family:"Roboto";}#pBanner{font-size:.145833333in;}#pBanner{font-weight:400;}*{padding-top:0;}#pBanner,#footer p{margin-top:auto;}#pBanner{color:white;}#footer p{margin-left:auto;}#bodyBlue{z-index:0;}#bodyBlue,#footer{width:100%;}body::-webkit-scrollbar{width:.75pt;}#footer p{margin-right:auto;}#bodyBlue{min-height:97vh;}#bodyBlue{flex-wrap:wrap;}#bodyBlue{background-image:linear-gradient(180deg,rgba(61,39,148,1),rgba(109,196,245,1));}#footer{z-index:9;}#footer{height:3vh;}body::-webkit-scrollbar-track{background:#303030;}#footer{top:97vh;}#footer{background-color:#303030;}body::-webkit-scrollbar-thumb{background:#313131;}#footer p{font-family:"Poppins";}#footer p{font-size:.625pc;}#footer p{font-weight:500;}#footer p{color:#888;}body::-webkit-scrollbar-thumb{border-radius:100px;}#footer p{letter-spacing:.020833333in;}
