--- a/css-j2bt6x/view-files.css
+++ b/css-j2bt6x/view-files.css
@@ -145,6 +145,7 @@
     margin-top: auto;
     margin-bottom: auto;
     margin-right: .5em;
+    background-color: blue;
 }
 
 .appIconHeader img {
