--- a/css-j2bt6x/view-files.css
+++ b/css-j2bt6x/view-files.css
@@ -146,6 +146,7 @@
     margin-bottom: auto;
     margin-right: .5em;
     background-color: blue;
+    justify-content: left;
 }
 
 .appIconHeader img {
