--- a/css-j2bt6x/view-files.css
+++ b/css-j2bt6x/view-files.css
@@ -1,268 +1,2 @@
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: white;
-    opacity: 0.5; /* Firefox */
-  }
-  
-  :-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color: rgba(255, 255, 255, 0.5)
-  }
-  
-  ::-ms-input-placeholder { /* Microsoft Edge */
-    color: rgba(255, 255, 255, 0.5)
-  }
-
-#centerFold {
-    width: 800px;
-    min-width: 320px;
-    margin:auto;
-    margin-top: 7.4em;
-    margin-bottom: 10vh;
-    padding-left: 1em;
-    padding-right: 1em;
-    height: auto;
-    display: inline-flex;
-    flex-direction: column;
-}
-
-#resources {
-    width: 100%;
-    height: auto;
-    min-width: 320px;
-    display: inline-flex;
-    flex-direction: column;
-}
-
-#resources img {
-    cursor: pointer;
-}
-
-.dropHeader {
-    height: auto;
-    width: 100%;
-    min-width: 320px;
-    display: inline-flex;
-    justify-content: space-between;
-    margin-bottom: 3em;
-}
-
-#dropCourse {
-    width: 100%;
-    height: 50px;
-    outline: none;
-    background: rgba(0, 0, 0, 0.05);
-    border: 1px white solid;
-    border-radius: 6px;
-    margin: auto;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 28px;
-    letter-spacing: 0.1em;
-    color: white;
-    text-align: center;
-}
-
-
-.dropOption {
-    color: #303030;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 28px;
-    letter-spacing: 0.1em;
-    text-align: center;
-    padding-top: 1em;
-    padding-bottom: 1em;
-
-}
-
-.frm {
-    width: 100%;
-    height: auto;
-    display: inline-flex;
-    flex-direction: column;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 3em;
-    border: 1px solid white;
-    border-radius: 6px;
-    background: rgba(0, 0, 0, 0.05);    
-}
-
-.frm img {
-    object-fit: none;
-    margin: auto;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-.frm h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 22px;
-    line-height: 28px;
-    letter-spacing: 0.1em;
-    color: #FFFFFF;
-}
-
-.entryHeader {
-    display: flex;
-    width: 98%;
-    height: auto;
-    margin: auto;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    justify-content: space-between;
-}
-
-.divAppTable {
-    display: none;
-}
-
-
-.leftHeader {
-    display: inline-flex;
-    width: auto;
-    height: auto;
-}
-
-.leftHeader h1 {
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
-.btnExpand {
-    transform: rotate(0deg);
-    transition: transform .2s linear;
-}
-
-.appIconHeader {
-    width: 24px;
-    height: 24px;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-right: .5em;
-    display: flex;
-    justify-content: left;
-}
-
-.appIconHeader img {
-    scale: 1;
-    object-fit: contain;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-
-.tableFileEntry {
-    display: flex;
-    width: 98%;
-    height: auto;
-    margin: auto;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    justify-content: space-between;
-}
-
-.tableFileEntry h1 {
-    margin-top: auto;
-    margin-bottom: auto;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    cursor: default;
-}
-
-.tableFileID {
-    margin: auto;
-    width: 40px;
-    min-width: 40px;
-    height: 40px;
-    display: flex;
-    margin-left: .2em;
-    margin-right: .2em;
-    overflow: hidden;
-    justify-content: center;
-}
-
-.tableFileTitle {
-    margin: auto;
-    width: 60%;
-    height: 40px;
-    display: flex;
-    margin-left: .2em;
-    margin-right: .2em;
-    overflow: hidden;
-    white-space: nowrap;
-}
-
-.tableFileDownloads {
-    margin: auto;
-    width: 20%;
-    height: 40px;
-    display: flex;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-.tableFileViews {
-    margin: auto;
-    width: 20%;
-    height: 40px;
-    display: flex;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-.tableFileControls {
-    margin: auto;
-    width: 116px;
-    min-width: 116px;
-    height: 40px;
-    display: flex;
-    margin-left: .2em;
-    margin-right: .2em;
-    justify-content: right;
-}
-
-.bannerLine {
-    width: 98%;
-    height: 1px;
-    background-color: white;
-    margin-left: auto;
-    margin-right: auto;
-    opacity: .3;
-}
-
-.textbox {
-    margin: auto;
-    width: 94%;
-    height: 40px;
-    border: 1px solid #FFFFFF;
-    border-radius: 4px;
-    background-color: transparent;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 23px;
-    letter-spacing: 0.1em;
-    padding-left: .4em;
-    padding-right: .4em;
-    padding-top: auto;
-    padding-bottom: auto;
-    color: white;
-    outline: none;
-    margin-left: .2em;
-    margin-right: .2em;
-}
-
-
-
-
+/* OBFUSCATED BY CSSOBFUSCATOR.COM at 2023/09/16 21:33:08 */
+.dropHeader,[class~=frm]{height:auto;}.dropHeader,[class~=frm]{width:100%;}#centerFold,.dropHeader{min-width:20pc;}[class~=frm] img{object-fit:none;}[class~=frm] img{margin-left:.2em;}[class~=frm],.dropHeader{display:inline-flex;}[class~=frm] img{margin-bottom:auto;}.dropHeader{justify-content:space-between;}[class~=frm],.dropHeader{margin-bottom:3em;}[class~=dropOption]{color:#303030;}::placeholder{color:white;}.frm h1,[class~=dropOption]{font-family:"Roboto";}[class~=dropOption],.frm h1{font-style:normal;}#centerFold{width:600pt;}[class~=frm] img{margin-right:.2em;}[class~=dropOption]{font-weight:700;}[class~=dropOption]{font-size:.875pc;}.frm h1,[class~=dropOption]{line-height:.291666667in;}#centerFold{margin-left:auto;}.frm h1,[class~=dropOption]{letter-spacing:.1em;}[class~=dropOption]{text-align:center;}[class~=dropOption]{padding-top:1em;}[class~=dropOption]{padding-bottom:1em;}[class~=frm]{flex-direction:column;}[class~=frm]{margin-left:auto;}[class~=frm]{margin-right:auto;}[class~=frm] img{margin-top:auto;}#centerFold{margin-bottom:10vh;}[class~=frm]{border-left-width:.0625pc;}[class~=frm]{border-bottom-width:.0625pc;}[class~=frm]{border-right-width:.0625pc;}[class~=frm]{border-top-width:.0625pc;}[class~=frm]{border-left-style:solid;}#centerFold,[class~=entryHeader]{margin-right:auto;}[class~=frm]{border-bottom-style:solid;}.frm h1{font-weight:900;}#centerFold{margin-top:7.4em;}[class~=frm]{border-right-style:solid;}[class~=frm]{border-top-style:solid;}[class~=frm]{border-left-color:white;}[class~=frm]{border-bottom-color:white;}[class~=frm]{border-right-color:white;}[class~=frm]{border-top-color:white;}[class~=frm]{border-image:none;}#centerFold{padding-left:1em;}.frm h1{font-size:22px;}[class~=frm]{border-radius:6px;}[class~=frm]{background:rgba(0,0,0,.05);}[class~=entryHeader]{display:flex;}#centerFold{padding-right:1em;}#resources,[class~=entryHeader],[class~=leftHeader],#centerFold{height:auto;}[class~=entryHeader]{width:98%;}[class~=entryHeader],[class~=tableFileEntry]{margin-left:auto;}[class~=entryHeader]{margin-bottom:1em;}::placeholder{opacity:.5;}[class~=entryHeader]{margin-top:1em;}[class~=entryHeader]{justify-content:space-between;}#resources,#centerFold{display:inline-flex;}.divAppTable{display:none;}.frm h1{color:#fff;}[class~=leftHeader]{display:inline-flex;}[class~=leftHeader]{width:auto;}[class~=btnExpand]{transform:rotate(0deg);}[class~=tableFileEntry] h1,[class~=leftHeader] h1,.appIconHeader{margin-top:auto;}[class~=btnExpand]{transition:transform .2s linear;}.appIconHeader{width:24px;}[class~=leftHeader] h1,.appIconHeader,[class~=tableFileEntry] h1{margin-bottom:auto;}.appIconHeader{height:1.5pc;}[class~=appIconHeader] img{scale:1;}#centerFold,#resources{flex-direction:column;}.appIconHeader{margin-right:.5em;}[class~=tableFileID],.tableFileViews,[class~=tableFileEntry],.appIconHeader,[class~=tableFileTitle],[class~=tableFileDownloads],[class~=tableFileControls]{display:flex;}#resources,#dropCourse{width:100%;}.appIconHeader{justify-content:left;}[class~=tableFileEntry]{width:98%;}[class~=tableFileEntry]{height:auto;}[class~=tableFileEntry]{margin-bottom:1em;}[class~=tableFileEntry]{margin-right:auto;}[class~=tableFileEntry]{margin-top:1em;}[class~=tableFileEntry]{justify-content:space-between;}[class~=tableFileTitle],.tableFileViews,[class~=tableFileDownloads],[class~=tableFileID]{margin-left:.2em;}.tableFileViews,[class~=tableFileDownloads],[class~=tableFileID],[class~=tableFileTitle]{margin-bottom:auto;}.tableFileViews,[class~=tableFileID],[class~=tableFileTitle],[class~=tableFileDownloads]{margin-right:.2em;}#resources{min-width:3.333333333in;}[class~=tableFileDownloads],[class~=tableFileTitle],.tableFileViews,[class~=tableFileID]{margin-top:auto;}[class~=appIconHeader] img{object-fit:contain;}[class~=tableFileID]{width:.416666667in;}[class~=tableFileID]{min-width:40px;}[class~=tableFileDownloads],[class~=tableFileTitle],.tableFileViews,[class~=tableFileID]{height:2.5pc;}[class~=tableFileID],[class~=tableFileTitle]{overflow:hidden;}[class~=appIconHeader] img{margin-left:auto;}[class~=appIconHeader] img{margin-right:auto;}[class~=tableFileID]{justify-content:center;}:-ms-input-placeholder{color:rgba(255,255,255,.5);}[class~=tableFileTitle]{width:60%;}[class~=tableFileTitle]{white-space:nowrap;}#dropCourse{height:3.125pc;}[class~=tableFileDownloads],.tableFileViews{width:20%;}[class~=tableFileEntry] h1{font-family:"Roboto";}::-ms-input-placeholder{color:rgba(255,255,255,.5);}[class~=tableFileEntry] h1{font-style:normal;}#dropCourse{outline:none;}#dropCourse{background:rgba(0,0,0,.05);}[class~=tableFileEntry] h1{font-weight:700;}#dropCourse,[class~=textbox]{border-left-width:.0625pc;}[class~=tableFileEntry] h1{font-size:10.5pt;}[class~=textbox],#dropCourse{border-bottom-width:.0625pc;}[class~=textbox],#dropCourse{border-right-width:.0625pc;}[class~=tableFileControls]{margin-left:.2em;}[class~=tableFileControls],[class~=textbox]{margin-bottom:auto;}[class~=textbox],[class~=tableFileEntry] h1{line-height:23px;}[class~=tableFileControls]{margin-right:.2em;}[class~=textbox],[class~=tableFileControls]{margin-top:auto;}[class~=tableFileControls]{width:87pt;}[class~=tableFileControls]{min-width:116px;}[class~=tableFileControls]{height:30pt;}[class~=tableFileControls]{justify-content:right;}[class~=bannerLine]{width:98%;}[class~=bannerLine]{height:.0625pc;}[class~=bannerLine]{background-color:white;}[class~=bannerLine]{margin-left:auto;}[class~=textbox],#dropCourse{border-top-width:.0625pc;}[class~=bannerLine]{margin-right:auto;}[class~=bannerLine]{opacity:.3;}[class~=textbox]{margin-left:.2em;}[class~=textbox]{margin-right:.2em;}[class~=textbox]{width:94%;}[class~=textbox]{height:40px;}#dropCourse,[class~=textbox]{border-left-style:solid;}[class~=textbox],#dropCourse{border-bottom-style:solid;}[class~=textbox],#dropCourse,[class~=tableFileEntry] h1{letter-spacing:.1em;}#dropCourse,[class~=textbox]{border-right-style:solid;}#dropCourse,[class~=textbox]{border-top-style:solid;}[class~=textbox]{border-left-color:#fff;}[class~=textbox]{border-bottom-color:#fff;}[class~=textbox]{border-right-color:#fff;}[class~=textbox]{border-top-color:#fff;}[class~=textbox]{border-image:none;}[class~=textbox]{border-radius:.041666667in;}[class~=textbox]{background-color:transparent;}#dropCourse,[class~=textbox]{font-family:"Roboto";}#dropCourse,[class~=textbox]{font-style:normal;}#dropCourse{border-left-color:white;}[class~=textbox]{font-weight:400;}[class~=textbox],#dropCourse{font-size:14px;}#dropCourse{border-bottom-color:white;}#dropCourse{border-right-color:white;}[class~=textbox]{padding-left:.4em;}[class~=textbox]{padding-right:.4em;}[class~=tableFileEntry] h1{cursor:default;}#dropCourse{border-top-color:white;}[class~=textbox]{padding-top:auto;}[class~=textbox]{padding-bottom:auto;}#dropCourse{border-image:none;}#dropCourse{border-radius:.0625in;}#dropCourse{margin-left:auto;}#dropCourse{margin-bottom:auto;}#dropCourse{margin-right:auto;}#dropCourse{margin-top:auto;}[class~=textbox],#dropCourse{color:white;}[class~=textbox]{outline:none;}#dropCourse{font-weight:700;}#dropCourse{line-height:21pt;}#dropCourse{text-align:center;}#resources img{cursor:pointer;}
